--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
   <!-- Custom Styles-->
   <link rel="stylesheet" href="/assets/css/style.css" />
-  <title>Yousef Fekri | ML Researcher </title>
+  <title> Yousef Fekri | ML Researcher </title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-126939217-2"></script>
@@ -35,10 +35,10 @@
   <!-- Open Graph-->
   <meta property="og:locale" content="en_US" />
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="Varad Bhogayata | Software Developer" />
-  <meta property="og:description" content="Software Developer" />
+  <meta property="og:title" content="Yousef Fekri | ML Researcher" />
+  <meta property="og:description" content="ML Researcher" />
   <meta property="og:url" content="https://youseffekri.github.io/" />
-  <meta property="og:site_name" content="Varad Bhogayata | Software Developer" />
+  <meta property="og:site_name" content="Yousef Fekri | ML Researcher" />
   <meta property="article:publisher" content="https://youseffekri.github.io/" />
   <meta property="og:image" content="https://youseffekri.github.io/examples/preview.JPG" />
   <!-- Twitter -->
