--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@Yousef_Fekri" />
   <meta name="twitter:title" content="Coder | Technofreak | Explorer | Minimalist | Humane" />
-  <meta name="twitter:description" content="Software Developer" />
+  <meta name="twitter:description" content="ML Researcher" />
   <meta name="twitter:url" content="https://twitter.com/Yousef_Fekri" />
   <meta name="author" content="Yousef Fekri" />
-  <meta name="description" content="Software Developer with a passion for backend development and artificial intelligence." />
+  <meta name="description" content="ML Researcher with a passion for backend development and artificial intelligence." />
   <link rel="apple-touch-icon" sizes="57x57" href="/assets/img/favicon/apple-icon-57x57.png" />
   <link rel="apple-touch-icon" sizes="60x60" href="/assets/img/favicon/apple-icon-60x60.png" />
   <link rel="apple-touch-icon" sizes="72x72" href="/assets/img/favicon/apple-icon-72x72.png" />
@@ -159,7 +159,7 @@
       class="button-collapse"><i class="mdi-navigation-menu"></i></a>
     <div class="name-title">
       <a id="name" aria-label="Navigate to the beginning of the page" href="#" class="teal-text">Yousef
-        Fekri</a><span class="black-text">Software Developer</span>
+        Fekri</a><span class="black-text">ML Researcher</span>
     </div>
   </nav>
 
@@ -255,7 +255,7 @@
       <div class="container flow-text">
         <!-- <blockquote>
           <h2>
-            A Software Developer with a passion for Backend Development and Artificial Intelligence.
+            A ML Researcher with a passion for Backend Development and Artificial Intelligence.
 
           </h2>
         </blockquote> -->        
@@ -279,7 +279,7 @@
           
         <!-- <p>
           
-          Detail-oriented Software Developer with professional experience in Backend Development, Machine Learning, Computer Vision. I am adept in Python, Django, Flask, SQL, Machine Learning, Computer Vision.           
+          Detail-oriented ML Researcher with professional experience in Backend Development, Machine Learning, Computer Vision. I am adept in Python, Django, Flask, SQL, Machine Learning, Computer Vision.           
         </p> -->
         <p>
           Looking for an opportunity to work in a challenging position combining my skills in Software Engineering, which provides professional development, interesting experiences and personal growth.
@@ -400,7 +400,7 @@ utilized perspective transformation, object detection, and object tracking to fi
                 </p>
               </div>
             </div>
-            <div class="role brown-text text-darken-2">Software Developer</div>
+            <div class="role brown-text text-darken-2">ML Researcher</div>
             <ul>
               <li>
                 Programmed a cloud-based web app using Flask and JavaScript aimed at storing, visualizing, and tracking temperature and humidity
