--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
   <!-- Custom Styles-->
   <link rel="stylesheet" href="/assets/css/style.css" />
-  <title> Yousef Fekri | ML Researcher </title>
+  <title> Yousef Fekri | Machine Learning Researcher </title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-126939217-2"></script>
@@ -35,20 +35,20 @@
   <!-- Open Graph-->
   <meta property="og:locale" content="en_US" />
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="Yousef Fekri | ML Researcher" />
-  <meta property="og:description" content="ML Researcher" />
+  <meta property="og:title" content="Yousef Fekri | Machine Learning Researcher" />
+  <meta property="og:description" content="Machine Learning Researcher" />
   <meta property="og:url" content="https://youseffekri.github.io/" />
-  <meta property="og:site_name" content="Yousef Fekri | ML Researcher" />
+  <meta property="og:site_name" content="Yousef Fekri | Machine Learning Researcher" />
   <meta property="article:publisher" content="https://youseffekri.github.io/" />
   <meta property="og:image" content="https://youseffekri.github.io/examples/preview.JPG" />
   <!-- Twitter -->
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@Yousef_Fekri" />
   <meta name="twitter:title" content="Coder | Technofreak | Explorer | Minimalist | Humane" />
-  <meta name="twitter:description" content="ML Researcher" />
+  <meta name="twitter:description" content="Machine Learning Researcher" />
   <meta name="twitter:url" content="https://twitter.com/Yousef_Fekri" />
   <meta name="author" content="Yousef Fekri" />
-  <meta name="description" content="ML Researcher with a passion for backend development and artificial intelligence." />
+  <meta name="description" content="Machine Learning Researcher with a passion for backend development and artificial intelligence." />
   <link rel="apple-touch-icon" sizes="57x57" href="/assets/img/favicon/apple-icon-57x57.png" />
   <link rel="apple-touch-icon" sizes="60x60" href="/assets/img/favicon/apple-icon-60x60.png" />
   <link rel="apple-touch-icon" sizes="72x72" href="/assets/img/favicon/apple-icon-72x72.png" />
@@ -159,7 +159,7 @@
       class="button-collapse"><i class="mdi-navigation-menu"></i></a>
     <div class="name-title">
       <a id="name" aria-label="Navigate to the beginning of the page" href="#" class="teal-text">Yousef
-        Fekri</a><span class="black-text">ML Researcher</span>
+        Fekri</a><span class="black-text">Machine Learning Researcher</span>
     </div>
   </nav>
 
@@ -255,7 +255,7 @@
       <div class="container flow-text">
         <!-- <blockquote>
           <h2>
-            A ML Researcher with a passion for Backend Development and Artificial Intelligence.
+            A Machine Learning Researcher with a passion for Backend Development and Artificial Intelligence.
 
           </h2>
         </blockquote> -->        
@@ -279,7 +279,7 @@
           
         <!-- <p>
           
-          Detail-oriented ML Researcher with professional experience in Backend Development, Machine Learning, Computer Vision. I am adept in Python, Django, Flask, SQL, Machine Learning, Computer Vision.           
+          Detail-oriented Machine Learning Researcher with professional experience in Backend Development, Machine Learning, Computer Vision. I am adept in Python, Django, Flask, SQL, Machine Learning, Computer Vision.           
         </p> -->
         <p>
           Looking for an opportunity to work in a challenging position combining my skills in Software Engineering, which provides professional development, interesting experiences and personal growth.
@@ -400,7 +400,7 @@ utilized perspective transformation, object detection, and object tracking to fi
                 </p>
               </div>
             </div>
-            <div class="role brown-text text-darken-2">ML Researcher</div>
+            <div class="role brown-text text-darken-2">Machine Learning Researcher</div>
             <ul>
               <li>
                 Programmed a cloud-based web app using Flask and JavaScript aimed at storing, visualizing, and tracking temperature and humidity
@@ -1013,7 +1013,7 @@ of each drug container to estimate the degradation of the drug.
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script type="text/javascript">
     var typed = new Typed('.typing',{
-      strings: ["Problem-solver", "Data Scientist", "ML Researcher"],
+      strings: ["Problem-solver", "Data Scientist", "Machine Learning Researcher"],
       loop: true,
       typeSpeed: 80,
       backSpeed: 40
