--- a/index.html
+++ b/index.html
@@ -37,36 +37,36 @@
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Yousef Fekri | Machine Learning Researcher" />
   <meta property="og:description" content="Machine Learning Researcher" />
-  <meta property="og:url" content="https://youseffekri.github.io/" />
+  <!-- <meta property="og:url" content="https://youseffekri.github.io/" /> -->
   <meta property="og:site_name" content="Yousef Fekri | Machine Learning Researcher" />
-  <meta property="article:publisher" content="https://youseffekri.github.io/" />
-  <meta property="og:image" content="https://youseffekri.github.io/examples/preview.JPG" />
+  <!-- <meta property="article:publisher" content="https://youseffekri.github.io/" /> -->
+  <!-- <meta property="og:image" content="https://youseffekri.github.io/examples/preview.JPG" /> -->
   <!-- Twitter -->
-  <meta name="twitter:card" content="summary" />
-  <meta name="twitter:site" content="@Yousef_Fekri" />
-  <meta name="twitter:title" content="Coder | Technofreak | Explorer | Minimalist | Humane" />
-  <meta name="twitter:description" content="Machine Learning Researcher" />
-  <meta name="twitter:url" content="https://twitter.com/Yousef_Fekri" />
-  <meta name="author" content="Yousef Fekri" />
-  <meta name="description" content="Machine Learning Researcher with a passion for backend development and artificial intelligence." />
-  <link rel="apple-touch-icon" sizes="57x57" href="/assets/img/favicon/apple-icon-57x57.png" />
-  <link rel="apple-touch-icon" sizes="60x60" href="/assets/img/favicon/apple-icon-60x60.png" />
-  <link rel="apple-touch-icon" sizes="72x72" href="/assets/img/favicon/apple-icon-72x72.png" />
-  <link rel="apple-touch-icon" sizes="76x76" href="/assets/img/favicon/apple-icon-76x76.png" />
-  <link rel="apple-touch-icon" sizes="114x114" href="/assets/img/favicon/apple-icon-114x114.png" />
-  <link rel="apple-touch-icon" sizes="120x120" href="/assets/img/favicon/apple-icon-120x120.png" />
-  <link rel="apple-touch-icon" sizes="144x144" href="/assets/img/favicon/apple-icon-144x144.png" />
-  <link rel="apple-touch-icon" sizes="152x152" href="/assets/img/favicon/apple-icon-152x152.png" />
-  <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/favicon/apple-icon-180x180.png" />
-  <link rel="icon" type="image/png" sizes="192x192" href="/assets/img/favicon/android-icon-192x192.png" />
-  <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon/favicon-32x32.png" />
-  <link rel="icon" type="image/png" sizes="96x96" href="/assets/img/favicon/favicon-96x96.png" />
-  <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon/favicon-16x16.png" />
-  <link rel="manifest" href="/assets/img/favicon/manifest.json" />
-  <meta name="msapplication-TileColor" content="#ffffff" />
-  <meta name="msapplication-TileImage" content="/assets/img/favicon/ms-icon-144x144.png" />
-  <meta name="theme-color" content="#ffffff" />
-  <meta name="robots" content="index, follow" />
+  <!-- <meta name="twitter:card" content="summary" /> -->
+  <!-- <meta name="twitter:site" content="@Yousef_Fekri" /> -->
+  <!-- <meta name="twitter:title" content="Coder | Technofreak | Explorer | Minimalist | Humane" /> -->
+  <!-- <meta name="twitter:description" content="Machine Learning Researcher" /> -->
+  <!-- <meta name="twitter:url" content="https://twitter.com/Yousef_Fekri" /> -->
+  <!-- <meta name="author" content="Yousef Fekri" /> -->
+  <!-- <meta name="description" content="Machine Learning Researcher with a passion for backend development and artificial intelligence." /> -->
+  <!-- <link rel="apple-touch-icon" sizes="57x57" href="/assets/img/favicon/apple-icon-57x57.png" /> -->
+  <!-- <link rel="apple-touch-icon" sizes="60x60" href="/assets/img/favicon/apple-icon-60x60.png" /> -->
+  <!-- <link rel="apple-touch-icon" sizes="72x72" href="/assets/img/favicon/apple-icon-72x72.png" /> -->
+  <!-- <link rel="apple-touch-icon" sizes="76x76" href="/assets/img/favicon/apple-icon-76x76.png" /> -->
+  <!-- <link rel="apple-touch-icon" sizes="114x114" href="/assets/img/favicon/apple-icon-114x114.png" /> -->
+  <!-- <link rel="apple-touch-icon" sizes="120x120" href="/assets/img/favicon/apple-icon-120x120.png" /> -->
+  <!-- <link rel="apple-touch-icon" sizes="144x144" href="/assets/img/favicon/apple-icon-144x144.png" /> -->
+  <!-- <link rel="apple-touch-icon" sizes="152x152" href="/assets/img/favicon/apple-icon-152x152.png" /> -->
+  <!-- <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/favicon/apple-icon-180x180.png" /> -->
+  <!-- <link rel="icon" type="image/png" sizes="192x192" href="/assets/img/favicon/android-icon-192x192.png" /> -->
+  <!-- <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon/favicon-32x32.png" /> -->
+  <!-- <link rel="icon" type="image/png" sizes="96x96" href="/assets/img/favicon/favicon-96x96.png" /> -->
+  <!-- <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon/favicon-16x16.png" /> -->
+  <!-- <link rel="manifest" href="/assets/img/favicon/manifest.json" /> -->
+  <!-- <meta name="msapplication-TileColor" content="#ffffff" /> -->
+  <!-- <meta name="msapplication-TileImage" content="/assets/img/favicon/ms-icon-144x144.png" /> -->
+  <!-- <meta name="theme-color" content="#ffffff" /> -->
+  <!-- <meta name="robots" content="index, follow" /> -->
   <!-- Google Site Verification for indexing -->
   <meta name="google-site-verification" content="_qxK8tePiU2fhnwlwnJ7pkDFnj1k2EiKq_cYGy1Cb84" />
 </head>
@@ -220,11 +220,11 @@
                   <i class="fa fa-linkedin"></i>
                 </button>
               </a>
-              <a href="https://github.com/youseffekri/" target="_blank">
-                <button class="icon-btn github">
-                  <i class="fa fa-github"></i>
-                </button>
-              </a>
+              <!-- <a href="https://github.com/youseffekri/" target="_blank"> -->
+                <!-- <button class="icon-btn github"> -->
+                  <!-- <i class="fa fa-github"></i> -->
+                <!-- </button> -->
+              <!-- </a> -->
 
               <!-- <a href="https://angel.co/u/Yousef_Fekri" target="_blank">
                 <button class="icon-btn angellist">
@@ -983,27 +983,27 @@ of each drug container to estimate the degradation of the drug.
         <p>
           <a aria-label="Call Yousef" data-position="top" data-tooltip="Call Yousef"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fa fa-phone"></i><a
-              aria-label="Call Yousef">+14805722456</a></a>
+              aria-label="Call Yousef">+17067143248</a></a>
         </p>
         <p>
-          <a aria-label="Email Yousef" href="mailto:vFekri@gmail.com" target="_blank" data-position="top"
+          <a aria-label="Email Yousef" href="mailto:yf67924@uga.edu" target="_blank" data-position="top"
             data-tooltip="Email Yousef" class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-              class="fa fa-envelope"></i><a aria-label="Email Yousef" href="mailto:vFekri@gmail.com"
-              class="hoverline">vFekri@gmail.com</a></a>
+              class="fa fa-envelope"></i><a aria-label="Email Yousef" href="mailto:yf67924@uga.edu"
+              class="hoverline">yf67924@uga.edu</a></a>
         </p>
+        <!-- <p> -->
+          <!-- <a aria-label="View Yousef on GitHub" href="http://github.com/youseffekri" target="_blank" -->
+            <!-- data-position="top" data-tooltip="View Yousef on GitHub" -->
+            <!-- class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fa fa-github"></i><a -->
+              <!-- aria-label="Yousef on Github" href="http://github.com/youseffekri" class="hoverline" -->
+              <!-- target="_blank">github.com/youseffekri</a></a> -->
+        <!-- </p> -->
         <p>
-          <a aria-label="View Yousef on GitHub" href="http://github.com/youseffekri" target="_blank"
-            data-position="top" data-tooltip="View Yousef on GitHub"
-            class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fa fa-github"></i><a
-              aria-label="Yousef on Github" href="http://github.com/youseffekri" class="hoverline"
-              target="_blank">github.com/youseffekri</a></a>
-        </p>
-        <p>
-          <a aria-label="View Yousef on LinkedIn" href="http://linkedin.com/in/youseffekri" target="_blank"
+          <a aria-label="View Yousef on LinkedIn" href="http://linkedin.com/in/yousef-fekri-140631103" target="_blank"
             data-position="top" data-tooltip="View Yousef on LinkedIn"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-              class="fa fa-linkedin"></i><a aria-label="Yousef on LinkedIn" href="http://linkedin.com/in/youseffekri"
-              class="hoverline" target="_blank">linkedin.com/in/youseffekri</a></a>
+              class="fa fa-linkedin"></i><a aria-label="Yousef on LinkedIn" href="http://linkedin.com/in/yousef-fekri-140631103"
+              class="hoverline" target="_blank">linkedin.com/in/YousefFekri</a></a>
         </p>
       </div>
     </section>
