--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         <!-- <a aria-label="Open Yousef's resume in a new tab" href="#resume" target="_blank"
           onclick="window.open('https://drive.google.com/file/d/1vYi-bMyIsZPve0x_clxY8xsDtiHiOMd3/view?usp=sharing')"
           class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a> -->
-        <a aria-label="Open Yousef's resume in a new tab" href="https://youseffekri.github.io/assets/resume/Yousef_Fekri_Resume.pdf" target="_blank"
+        <a aria-label="Open Yousef's resume in a new tab" href="https://youseffekri.github.io/assets/resume/Yousef_Fekri.pdf" target="_blank"
         class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>  
       </li>
     </ul>
@@ -941,6 +941,15 @@ of each drug container to estimate the degradation of the drug.
             </div>
 
             
+			<!-- Ph.D. in Computer Science \\ -->
+<!-- \textnormal{University of Georgia, Athens, GA, USA  {\em (2021- current)}}\\ -->
+<!-- Master of Science in Applied Mathematics \\  -->
+<!-- \textnormal{Sharif University of Technology, Tehran, Iran  \hfill {\em (2011- 2013)}} \\ -->
+<!-- % Project: \textit{A Comparison of Different Deep Learning Architectures on Coral Reef Detection.} -->
+<!-- Bachelor of Science in Mathematics \\ -->
+<!-- \textnormal{Semnan University, Semnan, Iran \hfill {\em (2007- 2011)}}  -->
+			
+			
           </div>
           <div class="col s12 m6 l6">
             <div class="card">
@@ -960,11 +969,11 @@ of each drug container to estimate the degradation of the drug.
                   <p>
                     <b>Relevant Courseworks:</b>
                   <ul>
-                    <li>Data Structures and Algorithms</li>
-                    <li>Database Management Systems</li>
-                    <li>Operating Systems</li>
-                    <li>Machine Learning</li>
-                    <li>Computer Vision</li>
+                    <li> Algorithms </li>
+                    <li> Machine Learning </li>
+                    <li> Data Science II </li>            
+					<li> Database Management Systems </li>
+                    <li> Computer Vision with Machine Learning </li>
                   </ul>
                   </p>
 
