--- a/index.html
+++ b/index.html
@@ -909,81 +909,76 @@ of each drug container to estimate the degradation of the drug.
 
     <!-- Seventh Section: Education -->
     <section id="education" class="section scrollspy">
-      <h3 class="page-title white-text teal">Education</h3>
-      <div class="container">
-        <div class="row">
-          <!-- Education -->
-          <div class="col s12 m6 l6">
-            <div class="card">
-              <div class="card-content">
-                <p>
-                  <span class="card-title"><a href="https://www.asu.edu/" target="_blank" class="teal-text hoverline">Arizona State University</a></span>
-                </p>
-                <p class="brown-text">Tempe, USA</p>
-                <p>
-                  <b>Degree: </b>Master of Science in Computer Science      
-                  <br>
-                  <b>CGPA: </b>4.0/4.0
-                </p>
-
-                <ul>
-                  <p>
-                    <b>Relevant Courseworks:</b>
-                  <ul>
-                    <li>Distributed Database Systems</li>
-                    <li>Cloud Computing</li>
-                    <li>Foundations of Algorithms</li>                    
-                  </ul>
-                  </p>
-
-                </ul>
-              </div>
-            </div>
-
-            
-			<!-- Ph.D. in Computer Science \\ -->
-<!-- \textnormal{University of Georgia, Athens, GA, USA  {\em (2021- current)}}\\ -->
-<!-- Master of Science in Applied Mathematics \\  -->
-<!-- \textnormal{Sharif University of Technology, Tehran, Iran  \hfill {\em (2011- 2013)}} \\ -->
-<!-- % Project: \textit{A Comparison of Different Deep Learning Architectures on Coral Reef Detection.} -->
-<!-- Bachelor of Science in Mathematics \\ -->
-<!-- \textnormal{Semnan University, Semnan, Iran \hfill {\em (2007- 2011)}}  -->
-			
-			
+  <h3 class="page-title white-text teal">Education</h3>
+  <div class="container">
+    <div class="row">
+      <!-- Left Column: Education Degrees -->
+      <div class="col s12 m6 l6">
+        <div class="card">
+          <div class="card-content">
+            <p>
+              <span class="card-title"><a href="https://www.uga.edu/" target="_blank" class="teal-text hoverline">University of Georgia</a></span>
+            </p>
+            <p class="brown-text">Athens, GA, USA</p>
+            <p>
+              <b>Degree: </b>Ph.D. in Computer Science <br>
+              <b>Year: </b>2021 - Current
+            </p>
           </div>
-          <div class="col s12 m6 l6">
-            <div class="card">
-              <div class="card-content">
-                <p>
-                  <span class="card-title"><a href="https://ahduni.edu.in/academics/schools-centres/school-of-engineering-and-applied-science/" target="_blank" class="teal-text hoverline">School of Engineering and Applied Science, Ahmedabad
-                      University</a></span>
-                </p>
-                <p class="brown-text">Ahmedabad, India</p>
-                <p>
-                  <b>Degree: </b>Bachelor of Technology in Information and Communication Technology
-                  <br>
-                  <b>CGPA: </b>3.13/4.33
-                </p>
+        </div>
 
-                <ul>
-                  <p>
-                    <b>Relevant Courseworks:</b>
-                  <ul>
-                    <li> Algorithms </li>
-                    <li> Machine Learning </li>
-                    <li> Data Science II </li>            
-					<li> Database Management Systems </li>
-                    <li> Computer Vision with Machine Learning </li>
-                  </ul>
-                  </p>
+        <div class="card">
+          <div class="card-content">
+            <p>
+              <span class="card-title"><a href="https://www.sharif.edu/" target="_blank" class="teal-text hoverline">Sharif University of Technology</a></span>
+            </p>
+            <p class="brown-text">Tehran, Iran</p>
+            <p>
+              <b>Degree: </b>Master of Science in Applied Mathematics <br>
+              <b>Year: </b>2011 - 2013
+            </p>
+          </div>
+        </div>
 
-                </ul>
-              </div>
-            </div>
+        <div class="card">
+          <div class="card-content">
+            <p>
+              <span class="card-title"><a href="https://www.semnan.ac.ir/" target="_blank" class="teal-text hoverline">Semnan University</a></span>
+            </p>
+            <p class="brown-text">Semnan, Iran</p>
+            <p>
+              <b>Degree: </b>Bachelor of Science in Mathematics <br>
+              <b>Year: </b>2007 - 2011
+            </p>
           </div>
         </div>
       </div>
-    </section>
+
+      <!-- Right Column: Relevant Courseworks -->
+      <div class="col s12 m6 l6">
+        <div class="card">
+          <div class="card-content">
+            <p>
+              <b>Relevant Coursework:</b>
+            </p>
+            <ul>
+              <li>Algorithms</li>
+              <li>Machine Learning</li>
+              <li>Data Science II</li>
+              <li>Database Management Systems</li>
+              <li>Computer Vision with Machine Learning</li>
+              <li>Advanced Mathematics</li>
+              <li>Statistical Methods</li>
+              <li>Numerical Analysis</li>
+              <li>Linear Algebra</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
 
     <!-- Eight Section: Contact -->
     <section id="contact" class="section scrollspy full-height">
