--- a/index.html
+++ b/index.html
@@ -930,7 +930,7 @@ of each drug container to estimate the degradation of the drug.
         <div class="card">
           <div class="card-content">
             <p>
-              <span class="card-title"><a href="https://www.sharif.edu/" target="_blank" class="teal-text hoverline">Sharif University of Technology</a></span>
+              <span class="card-title"><a href="https://en.sharif.ir/" target="_blank" class="teal-text hoverline">Sharif University of Technology</a></span>
             </p>
             <p class="brown-text">Tehran, Iran</p>
             <p>
@@ -943,7 +943,7 @@ of each drug container to estimate the degradation of the drug.
         <div class="card">
           <div class="card-content">
             <p>
-              <span class="card-title"><a href="https://www.semnan.ac.ir/" target="_blank" class="teal-text hoverline">Semnan University</a></span>
+              <span class="card-title"><a href="https://english.semnan.ac.ir/" target="_blank" class="teal-text hoverline">Semnan University</a></span>
             </p>
             <p class="brown-text">Semnan, Iran</p>
             <p>
@@ -966,11 +966,11 @@ of each drug container to estimate the degradation of the drug.
               <li>Machine Learning</li>
               <li>Data Science II</li>
               <li>Database Management Systems</li>
-              <li>Computer Vision with Machine Learning</li>
-              <li>Advanced Mathematics</li>
+              <li>Computer Vision with Machine Learning</li>     
               <li>Statistical Methods</li>
               <li>Numerical Analysis</li>
               <li>Linear Algebra</li>
+			  <li>Advanced Mathematics</li>
             </ul>
           </div>
         </div>
