--- a/index.html
+++ b/index.html
@@ -212,7 +212,9 @@
               <h2>Hi, I'm <span class="teal"> Yousef Fekri </span></h2>
               <h5 style="color:#fff">A <span class="typing" style="font-weight: 300; color:#0B2442"></span></h5>
               <!-- <h5 style="color:#00796b">A <span class="typing" style="font-weight: 300; color:#fff"></span></h5> -->
-              <h5>Self-driven, quick starter, passionate programmer with a curious mind who enjoys solving a complex and challenging real-world problems.</h5>
+              <h5>
+			  Motivated problem solver with a focus on deep learning models to address real-world challenges. Passionate about using logical reasoning and innovative machine learning approaches to develop practical solutions.
+			  </h5>
             </div>
             <div class="social">
               <a href="http://linkedin.com/in/youseffekri" target="_blank">
