--- a/index.html
+++ b/index.html
@@ -213,11 +213,11 @@
               <h5 style="color:#fff">A <span class="typing" style="font-weight: 300; color:#0B2442"></span></h5>
               <!-- <h5 style="color:#00796b">A <span class="typing" style="font-weight: 300; color:#fff"></span></h5> -->
               <h5>
-			  Motivated problem solver with a focus on deep learning models to address real-world challenges. Passionate about using logical reasoning and innovative machine learning approaches to develop practical solutions.
+			  Motivated problem Solver with a focus on deep learning models to address real-world challenges. Passionate about using logical reasoning and innovative machine learning approaches to develop practical solutions.
 			  </h5>
             </div>
             <div class="social">
-              <a href="http://linkedin.com/in/youseffekri" target="_blank">
+              <a href="http://linkedin.com/in/yousef-fekri-140631103" target="_blank">
                 <button class="icon-btn linkedin">
                   <i class="fa fa-linkedin"></i>
                 </button>
@@ -1019,7 +1019,7 @@ of each drug container to estimate the degradation of the drug.
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script type="text/javascript">
     var typed = new Typed('.typing',{
-      strings: ["Problem-solver", "Data Scientist", "Machine Learning Researcher"],
+      strings: ["Problem-Solver", "Data Scientist", "Machine Learning Researcher"],
       loop: true,
       typeSpeed: 80,
       backSpeed: 40
