--- a/index.html
+++ b/index.html
@@ -262,19 +262,15 @@
           </h2>
         </blockquote> -->        
         <p>
-          I am a Computer Science Grad Student at Arizona State University. I enjoy problem-solving and coding. Always strive to bring 100% to the work I do.
-
-          I have worked on technologies like Python, Django, Flask, MySQL, PostgreSQL, MongoDB, HTML5, CSS, Java, C++ during my bachelor's. I have 19 months of professional work experience which helped me strengthen my experience in Python, Flask, and Django.
-
-          I am passionate about solving real-world problems using ML techniques.
+          I got my master degree in Applied Mathematics from Sharif University of Technology, Tehran, Iran.
+		  I am currently doing my P.hD. in Computer Science at The University of Georgia.
         </p>
         <p>
           <ul>
-            <li><b>Languages:</b> Python, Java, JavaScript, C, C++, HTML/CSS, Bash</li>
-            <li><b>Databases:</b> MySQL, PostgreSQL, MongoDB</li>
+            <li><b>Languages:</b> Python, Java, Scala, C, C++, Bash</li>          
             <li><b>Libraries:</b> NumPy, Pandas, OpenCV</li>
-            <li><b>Frameworks:</b> Flask, Django, Node.js, Keras, TensorFlow, PyTorch, Bootstrap, Apache Beam</li>
-            <li><b>Tools & Technologies:</b> Git, Docker, AWS, GCP, Heroku, JIRA</li>
+            <li><b>Frameworks:</b> Django, Keras, TensorFlow, PyTorch, Bootstrap</li>
+            <li><b>Tools & Technologies:</b> Git, Docker</li>
           </ul>
           
         </p>
@@ -283,9 +279,9 @@
           
           Detail-oriented Machine Learning Researcher with professional experience in Backend Development, Machine Learning, Computer Vision. I am adept in Python, Django, Flask, SQL, Machine Learning, Computer Vision.           
         </p> -->
-        <p>
-          Looking for an opportunity to work in a challenging position combining my skills in Software Engineering, which provides professional development, interesting experiences and personal growth.
-        </p>
+        <!-- <p> -->
+          <!-- Looking for an opportunity to work in a challenging position combining my skills in Software Engineering, which provides professional development, interesting experiences and personal growth. -->
+        <!-- </p> -->
         <!-- <p>
           Another Paragraph
         </p>  -->
