--- a/index.html
+++ b/index.html
@@ -262,15 +262,16 @@
           </h2>
         </blockquote> -->        
         <p>
-          I got my master degree in Applied Mathematics from Sharif University of Technology, Tehran, Iran.
-		  I am currently doing my P.hD. in Computer Science at The University of Georgia.
+          I received my Master’s degree in Applied Mathematics from Sharif University of Technology, Tehran, Iran, and 
+		  I am currently pursuing a Ph.D. in Computer Science at The University of Georgia.
+		  My research interests focus on machine learning, time series forecasting, and symbolic regression for scientific discovery.
         </p>
         <p>
           <ul>
             <li><b>Languages:</b> Python, Java, Scala, C, C++, Bash</li>          
-            <li><b>Libraries:</b> NumPy, Pandas, OpenCV</li>
-            <li><b>Frameworks:</b> Django, Keras, TensorFlow, PyTorch, Bootstrap</li>
-            <li><b>Tools & Technologies:</b> Git, Docker</li>
+            <li><b>Libraries:</b> NumPy, Pandas, OpenCV </li>
+            <li><b>Frameworks:</b> Django, Keras, TensorFlow, PyTorch, Scalation</li>
+            <li><b>Tools & Technologies:</b> Git, Docker, Linux, Pytorch, Diffusion Models, GANs </li>
           </ul>
           
         </p>
