--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
         <p>
           I received my Master’s degree in Applied Mathematics from Sharif University of Technology, Tehran, Iran, and 
 		  I am currently pursuing a Ph.D. in Computer Science at The University of Georgia.
-		  My research interests focus on machine learning, time series forecasting, and symbolic regression for scientific discovery.
+		  My research interests focus on machine learning, time series forecasting using Neural Networks and Large Language Models, and symbolic regression for scientific discovery.
         </p>
         <p>
           <ul>
