--- a/index.html
+++ b/index.html
@@ -830,12 +830,12 @@ of each drug container to estimate the degradation of the drug.
               <div class="col s4 m2">
                 <img alt="" src="/assets/img/django-logo.webp" class="responsive-img" />Django
               </div>
-              <div class="col s4 m2">
-                <img alt="" src="/assets/img/flask-logo.png" class="responsive-img" />Flask
-              </div>
-              <div class="col s4 m2">
-                <img alt="" src="/assets/img/bootstrap.png" class="responsive-img" />Bootstrap
-              </div>
+              <!-- <div class="col s4 m2"> -->
+                <!-- <img alt="" src="/assets/img/flask-logo.png" class="responsive-img" />Flask -->
+              <!-- </div> -->
+              <!-- <div class="col s4 m2"> -->
+                <!-- <img alt="" src="/assets/img/bootstrap.png" class="responsive-img" />Bootstrap -->
+              <!-- </div> -->
               <div class="col s4 m2">
                 <img alt="" src="/assets/img/keras-logo.png" class="responsive-img" />Keras
               </div>
@@ -850,24 +850,24 @@ of each drug container to estimate the degradation of the drug.
         </div>
 
         <!-- Other -->
-        <div class="card">
-          <div class="card-content">
-            <h4 class="brown-text light">Other</h4>
-            <div class="row text-center">
+        <!-- <div class="card"> -->
+          <!-- <div class="card-content"> -->
+            <!-- <h4 class="brown-text light">Other</h4> -->
+            <!-- <div class="row text-center"> -->
 
 
-              <div class="col s4 m2">
-                <img alt="" src="/assets/img/git.png" class="responsive-img" />Git
-              </div>
-              <div class="col s4 m2">
-                <img alt="" src="/assets/img/aws.png" class="responsive-img" />AWS
-              </div>
-              <div class="col s4 m2">
-                <img alt="" src="/assets/img/heroku.png" class="responsive-img" />Heroku
-              </div>
-            </div>
-          </div>
-        </div>
+              <!-- <div class="col s4 m2"> -->
+                <!-- <img alt="" src="/assets/img/git.png" class="responsive-img" />Git -->
+              <!-- </div> -->
+              <!-- <div class="col s4 m2"> -->
+                <!-- <img alt="" src="/assets/img/aws.png" class="responsive-img" />AWS -->
+              <!-- </div> -->
+              <!-- <div class="col s4 m2"> -->
+                <!-- <img alt="" src="/assets/img/heroku.png" class="responsive-img" />Heroku -->
+              <!-- </div> -->
+            <!-- </div> -->
+          <!-- </div> -->
+        <!-- </div> -->
 
         <!-- certifications -->
         <!-- <div class="card">
