--- a/index.html
+++ b/index.html
@@ -781,16 +781,13 @@ of each drug container to estimate the degradation of the drug.
                 <img alt="" src="/assets/img/python-logo-1-300x300.jpg" class="responsive-img" />Python
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/html5-300x300.jpg" class="responsive-img" />HTML5
+                <img alt="" src="/assets/img/Java.jpg" class="responsive-img" /> Java
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/css3-300x300.jpg" class="responsive-img" />CSS3
+                <img alt="" src="/assets/img/Scala.jpg" class="responsive-img" /> Scala
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/mysql-logo-1-300x300.jpg" class="responsive-img" />MySQL
-              </div>
-              <div class="col s4 m2">
-                <img alt="" src="/assets/img/postgresql-logo.png" class="responsive-img" />PostgreSQL
+                <img alt="" src="/assets/img/C.jpg" class="responsive-img" /> C/C++
               </div>
               <div class="col s4 m2">
                 <img alt="" src="/assets/img/shell-logo-1-300x300.jpg" class="responsive-img" />Shell Scripting
