--- a/index.html
+++ b/index.html
@@ -444,52 +444,56 @@
 
 
 
-
 <!-- Fourth Section: Projects -->
-	<section id="projects" class="section scrollspy">
-	  <h3 class="page-title white-text teal">Projects</h3>
-	  <div class="container">
-		<div class="row">
+<section id="projects" class="section scrollspy">
+  <h3 class="page-title white-text teal">Projects</h3>
+  <div class="container">
+    <div class="row">
 
-		  <div class="col s12 m6 l4">
-			<div class="card medium">
-			  <div class="card-content">
-				<span class="card-title activator teal-text hoverline">Attention-Based Time Series Models in Scala<i class="mdi-navigation-more-vert right"></i></span>
-				<p>Developed Transformers in Scala, achieving functional parity in self-attention and multi-head attention mechanisms with PyTorch implementations. Currently extending to time series analysis.</p>
-			  </div>
-			</div>
-		  </div>
+      <!-- First Project -->
+      <div class="col s12 m6 l6">
+        <div class="card medium">
+          <div class="card-content">
+            <span class="card-title teal-text hoverline">Attention-Based Time Series Models in Scala</span>
+            <p>Developed Transformers in Scala, achieving functional parity in self-attention and multi-head attention mechanisms with PyTorch implementations. Currently extending to time series analysis.</p>
+          </div>
+        </div>
+      </div>
 
-		  <div class="col s12 m6 l4">
-			<div class="card medium">
-			  <div class="card-content">
-				<span class="card-title activator teal-text hoverline">Multi-Model Integrated Sentence Similarity Framework<i class="mdi-navigation-more-vert right"></i></span>
-				<p>Developed a computational framework for enhancing sentence similarity assessments in Natural Language Processing, leveraging the COCO dataset for robust training and evaluation.</p>
-			  </div>
-			</div>
-		  </div>
+      <!-- Second Project -->
+      <div class="col s12 m6 l6">
+        <div class="card medium">
+          <div class="card-content">
+            <span class="card-title teal-text hoverline">Multi-Model Integrated Sentence Similarity Framework</span>
+            <p>Developed a computational framework for enhancing sentence similarity assessments in Natural Language Processing, leveraging the COCO dataset for robust training and evaluation.</p>
+          </div>
+        </div>
+      </div>
 
-		  <div class="col s12 m6 l4">
-			<div class="card medium">
-			  <div class="card-content">
-				<span class="card-title activator teal-text hoverline">Fake Image Region Detection in Deepfake Images<i class="mdi-navigation-more-vert right"></i></span>
-				<p>Trained a deep learning model to identify and localize fake regions within facial manipulations, leveraging PSCC-Net and HRNet.</p>
-			  </div>
-			</div>
-		  </div>
+      <!-- Third Project -->
+      <div class="col s12 m6 l6">
+        <div class="card medium">
+          <div class="card-content">
+            <span class="card-title teal-text hoverline">Fake Image Region Detection in Deepfake Images</span>
+            <p>Trained a deep learning model to identify and localize fake regions within facial manipulations, leveraging PSCC-Net and HRNet.</p>
+          </div>
+        </div>
+      </div>
 
-		  <div class="col s12 m6 l4">
-			<div class="card medium">
-			  <div class="card-content">
-				<span class="card-title activator teal-text hoverline">ARMA Modeling for COVID-19 Vaccination Impact<i class="mdi-navigation-more-vert right"></i></span>
-				<p>Utilized ARMA models to estimate lives saved by COVID-19 vaccinations in 2021 based on 2020 mortality data, optimizing model parameters using RMSE.</p>
-			  </div>
-			</div>
-		  </div>
+      <!-- Fourth Project -->
+      <div class="col s12 m6 l6">
+        <div class="card medium">
+          <div class="card-content">
+            <span class="card-title teal-text hoverline">ARMA Modeling for COVID-19 Vaccination Impact</span>
+            <p>Utilized ARMA models to estimate lives saved by COVID-19 vaccinations in 2021 based on 2020 mortality data, optimizing model parameters using RMSE.</p>
+          </div>
+        </div>
+      </div>
 
-		</div>
-	  </div>
-	</section>
+    </div>
+  </div>
+</section>
+
 
 
     <!-- Fifth Section: Skills -->
