--- a/index.html
+++ b/index.html
@@ -452,55 +452,52 @@
 
       <!-- First Project -->
       <div class="col s12 m6 l6">
-        <div class="card medium">
-          <div class="card-content">
+        <div class="card medium" style="height: auto;">
+          <div class="card-content" style="overflow: visible;">
             <span class="card-title teal-text hoverline">Attention-Based Time Series Models in Scala</span>
             <br><br>
-			<p>Developed Transformers in Scala, achieving functional parity in self-attention and multi-head attention mechanisms with PyTorch implementations. Currently extending to time series analysis.</p>
+            <p>Developed Transformers in Scala, achieving functional parity in self-attention and multi-head attention mechanisms with PyTorch implementations. Currently extending to time series analysis.</p>
           </div>
         </div>
       </div>
 
       <!-- Second Project -->
-	  <div class="col s12 m6 l6">
-        <div class="card medium">
-          <div class="card-content">
-            <span class="card-title teal-text hoverline">ARMA Modeling for COVID-19 Vaccination Impact</span>
+      <div class="col s12 m6 l6">
+        <div class="card medium" style="height: auto;">
+          <div class="card-content" style="overflow: visible;">
+            <span class="card-title teal-text hoverline">Multi-Model Integrated Sentence Similarity Framework</span>
             <br><br>
-			<p>Utilized ARMA models to estimate lives saved by COVID-19 vaccinations in 2021 based on 2020 mortality data, optimizing model parameters using RMSE.</p>
+            <p>Developed a computational framework for enhancing sentence similarity assessments in Natural Language Processing, leveraging the COCO dataset for robust training and evaluation.</p>
           </div>
         </div>
       </div>
-	  
-	  
-	  <!-- Third Project -->
+
+      <!-- Third Project -->
       <div class="col s12 m6 l6">
-        <div class="card medium">
-          <div class="card-content">
-            <span class="card-title teal-text hoverline">Multi-Model Integrated Sentence Similarity Framework</span>
+        <div class="card medium" style="height: auto;">
+          <div class="card-content" style="overflow: visible;">
+            <span class="card-title teal-text hoverline">Fake Image Region Detection in Deepfake Images</span>
             <br><br>
-			<p>Developed a computational framework for enhancing sentence similarity assessments in Natural Language Processing, leveraging the COCO dataset for robust training and evaluation.</p>
+            <p>Trained a deep learning model to identify and localize fake regions within facial manipulations, leveraging PSCC-Net and HRNet.</p>
           </div>
         </div>
       </div>
 
       <!-- Fourth Project -->
       <div class="col s12 m6 l6">
-        <div class="card medium">
-          <div class="card-content">
-            <span class="card-title teal-text hoverline">Fake Image Region Detection in Deepfake Images</span>
+        <div class="card medium" style="height: auto;">
+          <div class="card-content" style="overflow: visible;">
+            <span class="card-title teal-text hoverline">ARMA Modeling for COVID-19 Vaccination Impact</span>
             <br><br>
-			<p>Trained a deep learning model to identify and localize fake regions within facial manipulations, leveraging PSCC-Net and HRNet.</p>
+            <p>Utilized ARMA models to estimate lives saved by COVID-19 vaccinations in 2021 based on 2020 mortality data, optimizing model parameters using RMSE.</p>
           </div>
         </div>
       </div>
 
-      
-
-
     </div>
   </div>
 </section>
+
 
 
 
