--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
       <div class="col s12 m6 l6">
         <div class="card medium" style="height: auto;">
           <div class="card-content" style="overflow: visible;">
-            <span class="card-title teal-text hoverline">Attention-Based Time Series Models in Scala</span>
+            <span class="card-title teal-text hoverline">Multi-Model Time Series (Ongoing) </span>
             <br><br>
             <p>Developed Transformers in Scala, achieving functional parity in self-attention and multi-head attention mechanisms with PyTorch implementations. Currently extending to time series analysis.</p>
           </div>
