--- a/index.html
+++ b/index.html
@@ -444,59 +444,104 @@
 
 
 
-<!-- Fourth Section: Projects -->
 <section id="projects" class="section scrollspy">
   <h3 class="page-title white-text teal">Projects</h3>
   <div class="container">
     <div class="row">
 
-      <!-- First Project -->
-      <div class="col s12 m6 l6">
-        <div class="card medium" style="height: auto;">
-          <div class="card-content" style="overflow: visible;">
-            <span class="card-title teal-text hoverline">Multi-Model Time Series (Ongoing) </span>
-            <br><br>
-            <p>Developed Transformers in Scala, achieving functional parity in self-attention and multi-head attention mechanisms with PyTorch implementations. Currently extending to time series analysis.</p>
+      <!-- Attention-Based Time Series Models in Scala -->
+      <div class="col s12 m6 l4">
+        <div class="card medium">
+          <div class="card-image waves-effect waves-block waves-light">
+            <img alt="Scala time series project" src="/assets/img/time-series-project.png" style="height: 100%; width: 100%" class="activator" />
+          </div>
+          <div class="card-content">
+            <span class="card-title activator teal-text hoverline">Attention-Based Time Series Models in Scala<i
+                class="mdi-navigation-more-vert right"></i></span>
+            <p>Developed Transformers in Scala, achieving functional parity in self-attention and multi-head attention mechanisms.</p>
+          </div>
+          <div class="card-reveal">
+            <span class="card-title grey-text"><small>Accomplishments</small><i
+                class="mdi-navigation-close right"></i></span>
+            <ul>
+              <li><b>Tools:</b> Scala, PyTorch</li>
+              <li>Currently extending to an attention-based model for time series analysis.</li>
+            </ul>
           </div>
         </div>
       </div>
 
-      <!-- Second Project -->
-      <div class="col s12 m6 l6">
-        <div class="card medium" style="height: auto;">
-          <div class="card-content" style="overflow: visible;">
-            <span class="card-title teal-text hoverline">Multi-Model Integrated Sentence Similarity Framework</span>
-            <br><br>
-            <p>Developed a computational framework for enhancing sentence similarity assessments in Natural Language Processing, leveraging the COCO dataset for robust training and evaluation.</p>
+      <!-- Multi-Model Integrated Sentence Similarity Framework -->
+      <div class="col s12 m6 l4">
+        <div class="card medium">
+          <div class="card-image waves-effect waves-block waves-light">
+            <img alt="NLP project" src="/assets/img/sentence-similarity.png" style="height: 100%; width: 100%" class="activator" />
+          </div>
+          <div class="card-content">
+            <span class="card-title activator teal-text hoverline">Multi-Model Integrated Sentence Similarity Framework<i
+                class="mdi-navigation-more-vert right"></i></span>
+            <p>Developed a computational framework for sentence similarity assessments.</p>
+          </div>
+          <div class="card-reveal">
+            <span class="card-title grey-text"><small>Accomplishments</small><i
+                class="mdi-navigation-close right"></i></span>
+            <ul>
+              <li><b>Tools:</b> COCO dataset</li>
+              <li>Enhanced training and evaluation in Natural Language Processing.</li>
+            </ul>
           </div>
         </div>
       </div>
 
-      <!-- Third Project -->
-      <div class="col s12 m6 l6">
-        <div class="card medium" style="height: auto;">
-          <div class="card-content" style="overflow: visible;">
-            <span class="card-title teal-text hoverline">Fake Image Region Detection in Deepfake Images</span>
-            <br><br>
-            <p>Trained a deep learning model to identify and localize fake regions within facial manipulations, leveraging PSCC-Net and HRNet.</p>
+      <!-- Fake Image Region Detection in Deepfake Images -->
+      <div class="col s12 m6 l4">
+        <div class="card medium">
+          <div class="card-image waves-effect waves-block waves-light">
+            <img alt="Deepfake detection" src="/assets/img/deepfake-detection.png" style="height: 100%; width: 100%" class="activator" />
+          </div>
+          <div class="card-content">
+            <span class="card-title activator teal-text hoverline">Fake Image Region Detection in Deepfake Images<i
+                class="mdi-navigation-more-vert right"></i></span>
+            <p>Trained a deep learning model to identify and describe manipulated regions in deepfakes.</p>
+          </div>
+          <div class="card-reveal">
+            <span class="card-title grey-text"><small>Accomplishments</small><i
+                class="mdi-navigation-close right"></i></span>
+            <ul>
+              <li><b>Tools:</b> PSCC-Net, HRNet</li>
+              <li>Provided detailed facial manipulation detection.</li>
+            </ul>
           </div>
         </div>
       </div>
 
-      <!-- Fourth Project -->
-      <div class="col s12 m6 l6">
-        <div class="card medium" style="height: auto;">
-          <div class="card-content" style="overflow: visible;">
-            <span class="card-title teal-text hoverline">ARMA Modeling for COVID-19 Vaccination Impact</span>
-            <br><br>
-            <p>Utilized ARMA models to estimate lives saved by COVID-19 vaccinations in 2021 based on 2020 mortality data, optimizing model parameters using RMSE.</p>
+      <!-- ARMA Modeling for Estimating Lives Saved by COVID-19 Vaccination -->
+      <div class="col s12 m6 l4">
+        <div class="card medium">
+          <div class="card-image waves-effect waves-block waves-light">
+            <img alt="ARMA COVID-19 project" src="/assets/img/covid19-modeling.png" style="height: 100%; width: 100%" class="activator" />
+          </div>
+          <div class="card-content">
+            <span class="card-title activator teal-text hoverline">ARMA Modeling for Estimating Lives Saved by COVID-19 Vaccination<i
+                class="mdi-navigation-more-vert right"></i></span>
+            <p>Applied ARMA models to estimate lives saved by vaccinations in 2021.</p>
+          </div>
+          <div class="card-reveal">
+            <span class="card-title grey-text"><small>Accomplishments</small><i
+                class="mdi-navigation-close right"></i></span>
+            <ul>
+              <li><b>Tools:</b> ARMA, RMSE</li>
+              <li>Utilized 2020 COVID-19 mortality data for parameter optimization.</li>
+            </ul>
           </div>
         </div>
       </div>
+
 
     </div>
   </div>
 </section>
+
 
 
 
