--- a/index.html
+++ b/index.html
@@ -449,14 +449,14 @@
   <div class="container">
     <div class="row">
 
-      <!-- Attention-Based Time Series Models in Scala -->
-      <div class="col s12 m6 l4">
+      <!-- Multi-Modal Time Series Forcasting (Ongoing) -->
+      <div class="col s12 m6">
         <div class="card medium">
           <div class="card-image waves-effect waves-block waves-light">
             <img alt="Scala time series project" src="/assets/img/time-series-project.png" style="height: 100%; width: 100%" class="activator" />
           </div>
           <div class="card-content">
-            <span class="card-title activator teal-text hoverline">Attention-Based Time Series Models in Scala<i
+            <span class="card-title activator teal-text hoverline">Multi-Modal Time Series Forcasting (Ongoing)<i
                 class="mdi-navigation-more-vert right"></i></span>
             <p>Developed Transformers in Scala, achieving functional parity in self-attention and multi-head attention mechanisms.</p>
           </div>
@@ -471,8 +471,30 @@
         </div>
       </div>
 
+      <!-- ARMA Modeling for Estimating Lives Saved by COVID-19 Vaccination -->
+      <div class="col s12 m6">
+        <div class="card medium">
+          <div class="card-image waves-effect waves-block waves-light">
+            <img alt="ARMA COVID-19 project" src="/assets/img/covid19-modeling.png" style="height: 100%; width: 100%" class="activator" />
+          </div>
+          <div class="card-content">
+            <span class="card-title activator teal-text hoverline">ARMA Modeling for Estimating Lives Saved by COVID-19 Vaccination<i
+                class="mdi-navigation-more-vert right"></i></span>
+            <p>Applied ARMA models to estimate lives saved by vaccinations in 2021.</p>
+          </div>
+          <div class="card-reveal">
+            <span class="card-title grey-text"><small>Accomplishments</small><i
+                class="mdi-navigation-close right"></i></span>
+            <ul>
+              <li><b>Tools:</b> ARMA, RMSE</li>
+              <li>Utilized 2020 COVID-19 mortality data for parameter optimization.</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
       <!-- Multi-Model Integrated Sentence Similarity Framework -->
-      <div class="col s12 m6 l4">
+      <div class="col s12 m6">
         <div class="card medium">
           <div class="card-image waves-effect waves-block waves-light">
             <img alt="NLP project" src="/assets/img/sentence-similarity.png" style="height: 100%; width: 100%" class="activator" />
@@ -494,7 +516,7 @@
       </div>
 
       <!-- Fake Image Region Detection in Deepfake Images -->
-      <div class="col s12 m6 l4">
+      <div class="col s12 m6">
         <div class="card medium">
           <div class="card-image waves-effect waves-block waves-light">
             <img alt="Deepfake detection" src="/assets/img/deepfake-detection.png" style="height: 100%; width: 100%" class="activator" />
@@ -515,32 +537,10 @@
         </div>
       </div>
 
-      <!-- ARMA Modeling for Estimating Lives Saved by COVID-19 Vaccination -->
-      <div class="col s12 m6 l4">
-        <div class="card medium">
-          <div class="card-image waves-effect waves-block waves-light">
-            <img alt="ARMA COVID-19 project" src="/assets/img/covid19-modeling.png" style="height: 100%; width: 100%" class="activator" />
-          </div>
-          <div class="card-content">
-            <span class="card-title activator teal-text hoverline">ARMA Modeling for Estimating Lives Saved by COVID-19 Vaccination<i
-                class="mdi-navigation-more-vert right"></i></span>
-            <p>Applied ARMA models to estimate lives saved by vaccinations in 2021.</p>
-          </div>
-          <div class="card-reveal">
-            <span class="card-title grey-text"><small>Accomplishments</small><i
-                class="mdi-navigation-close right"></i></span>
-            <ul>
-              <li><b>Tools:</b> ARMA, RMSE</li>
-              <li>Utilized 2020 COVID-19 mortality data for parameter optimization.</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-
-
     </div>
   </div>
 </section>
+
 
 
 
