--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@
       <div class="col s12 m6">
         <div class="card medium">
           <div class="card-image waves-effect waves-block waves-light">
-            <img alt="Deepfake detection" src="/assets/img/deepfake-detection.png" style="height: 100%; width: 100%" class="activator" />
+            <img alt="Deepfake detection" src="/assets/img/Deepfake.jpg" style="height: 100%; width: 100%" class="activator" />
           </div>
           <div class="card-content">
             <span class="card-title activator teal-text hoverline">Fake Image Region Detection in Deepfake Images<i
