--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
       <div class="col s12 m6">
         <div class="card medium">
           <div class="card-image waves-effect waves-block waves-light">
-            <img alt="NLP project" src="/assets/img/sentence-similarity.png" style="height: 100%; width: 100%" class="activator" />
+            <img alt="NLP project" src="/assets/img/similarity.jpg" style="height: 100%; width: 100%" class="activator" />
           </div>
           <div class="card-content">
             <span class="card-title activator teal-text hoverline">Multi-Model Integrated Sentence Similarity Framework<i
