--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
       <div class="col s12 m6">
         <div class="card medium">
           <div class="card-image waves-effect waves-block waves-light">
-            <img alt="ARMA COVID-19 project" src="/assets/img/covid19-modeling.png" style="height: 100%; width: 100%" class="activator" />
+            <img alt="ARMA COVID-19 project" src="/assets/img/arma.jpg" style="height: 100%; width: 100%" class="activator" />
           </div>
           <div class="card-content">
             <span class="card-title activator teal-text hoverline">ARMA Modeling for Estimating Lives Saved by COVID-19 Vaccination<i
@@ -524,7 +524,7 @@
           <div class="card-content">
             <span class="card-title activator teal-text hoverline">Fake Image Region Detection in Deepfake Images<i
                 class="mdi-navigation-more-vert right"></i></span>
-            <p>Trained a deep learning model to identify and describe manipulated regions in deepfakes.</p>
+            <p>Trained a deep learning model to identify and describe manipulated regions in deepfake images.</p>
           </div>
           <div class="card-reveal">
             <span class="card-title grey-text"><small>Accomplishments</small><i
