--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
           <div class="card-content">
             <span class="card-title activator teal-text hoverline">ARMA Modeling for Estimating Lives Saved by COVID-19 Vaccination<i
                 class="mdi-navigation-more-vert right"></i></span>
-            <p>Applied ARMA models to estimate lives saved by vaccinations in 2021.</p>
+            <!-- <p>Applied ARMA models to estimate lives saved by vaccinations in 2021.</p> -->
           </div>
           <div class="card-reveal">
             <span class="card-title grey-text"><small>Accomplishments</small><i
