--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
           <div class="card-content">
             <span class="card-title activator teal-text hoverline">Multi-Modal Time Series Forcasting (Ongoing)<i
                 class="mdi-navigation-more-vert right"></i></span>
-            <p>Developed Transformers in Scala, achieving functional parity in self-attention and multi-head attention mechanisms.</p>
+            <!-- <p>Developed Transformers in Scala, achieving functional parity in self-attention and multi-head attention mechanisms.</p> -->
           </div>
           <div class="card-reveal">
             <span class="card-title grey-text"><small>Accomplishments</small><i
@@ -502,7 +502,7 @@
           <div class="card-content">
             <span class="card-title activator teal-text hoverline">Multi-Model Integrated Sentence Similarity Framework<i
                 class="mdi-navigation-more-vert right"></i></span>
-            <p>Developed a computational framework for sentence similarity assessments.</p>
+            <!-- <p>Developed a computational framework for sentence similarity assessments.</p> -->
           </div>
           <div class="card-reveal">
             <span class="card-title grey-text"><small>Accomplishments</small><i
@@ -524,7 +524,7 @@
           <div class="card-content">
             <span class="card-title activator teal-text hoverline">Fake Image Region Detection in Deepfake Images<i
                 class="mdi-navigation-more-vert right"></i></span>
-            <p>Trained a deep learning model to identify and describe manipulated regions in deepfake images.</p>
+            <!-- <p>Trained a deep learning model to identify and describe manipulated regions in deepfake images.</p> -->
           </div>
           <div class="card-reveal">
             <span class="card-title grey-text"><small>Accomplishments</small><i
