--- a/index.html
+++ b/index.html
@@ -480,14 +480,13 @@
           <div class="card-content">
             <span class="card-title activator teal-text hoverline">ARMA Modeling for Estimating Lives Saved by COVID-19 Vaccination<i
                 class="mdi-navigation-more-vert right"></i></span>
-            <!-- <p>Applied ARMA models to estimate lives saved by vaccinations in 2021.</p> -->
+            
           </div>
           <div class="card-reveal">
             <span class="card-title grey-text"><small>Accomplishments</small><i
                 class="mdi-navigation-close right"></i></span>
             <ul>
-              <li><b>Tools:</b> ARMA, RMSE</li>
-              <li>Utilized 2020 COVID-19 mortality data for parameter optimization.</li>
+              <p>Applied ARMA models to estimate lives saved by vaccinations in 2021.</p>
             </ul>
           </div>
         </div>
