--- a/index.html
+++ b/index.html
@@ -486,7 +486,11 @@
             <span class="card-title grey-text"><small>Accomplishments</small><i
                 class="mdi-navigation-close right"></i></span>
             <ul>
-              <p>Applied ARMA models to estimate lives saved by vaccinations in 2021.</p>
+              <p>
+			  In this project, we aimed to estimate the number of lives saved by COVID-19 vaccination in 2021 using ARMA modeling on pre-vaccine mortality data from 2020.
+			  We trained and optimized the model to forecast deaths in 2021 without vaccination and compared it to observed data.
+			  The results underscore the significant role of vaccination in reducing COVID-19 fatalities.
+			  </p>
             </ul>
           </div>
         </div>
