--- a/index.html
+++ b/index.html
@@ -449,14 +449,14 @@
   <div class="container">
     <div class="row">
 
-      <!-- Multi-Modal Time Series Forcasting (Ongoing) -->
+      <!-- Symbolic Regression for Time Series Forcasting (Ongoing) -->
       <div class="col s12 m6">
         <div class="card medium">
           <div class="card-image waves-effect waves-block waves-light">
-            <img alt="Scala time series project" src="/assets/img/time-series-project.png" style="height: 100%; width: 100%" class="activator" />
+            <img alt="Scala time series project" src="/assets/img/SR.jpg" style="height: 100%; width: 100%" class="activator" />
           </div>
           <div class="card-content">
-            <span class="card-title activator teal-text hoverline">Multi-Modal Time Series Forcasting (Ongoing)<i
+            <span class="card-title activator teal-text hoverline"> Symbolic Regression for Time Series Forcasting (Ongoing) <i
                 class="mdi-navigation-more-vert right"></i></span>
             <!-- <p>Developed Transformers in Scala, achieving functional parity in self-attention and multi-head attention mechanisms.</p> -->
           </div>
