--- a/index.html
+++ b/index.html
@@ -511,9 +511,12 @@
             <span class="card-title grey-text"><small>Accomplishments</small><i
                 class="mdi-navigation-close right"></i></span>
             <ul>
-              <li><b>Tools:</b> COCO dataset</li>
-              <li>Enhanced training and evaluation in Natural Language Processing.</li>
-            </ul>
+			<p>
+              In this project, we aimed to enhance Large Language Models' (LLMs) understanding of implicit humor and sarcasm in sentence similarity assessments by integrating sentiment analysis.
+			  Our approach adjusts similarity scores based on sentiment evaluation, improving LLMs' accuracy in interpreting complex expressions.
+			  This advancement has applications in content moderation and automated analysis.
+            </p>
+			</ul>
           </div>
         </div>
       </div>
@@ -527,14 +530,16 @@
           <div class="card-content">
             <span class="card-title activator teal-text hoverline">Fake Image Region Detection in Deepfake Images<i
                 class="mdi-navigation-more-vert right"></i></span>
-            <!-- <p>Trained a deep learning model to identify and describe manipulated regions in deepfake images.</p> -->
           </div>
           <div class="card-reveal">
             <span class="card-title grey-text"><small>Accomplishments</small><i
                 class="mdi-navigation-close right"></i></span>
             <ul>
-              <li><b>Tools:</b> PSCC-Net, HRNet</li>
-              <li>Provided detailed facial manipulation detection.</li>
+              <p>
+			  In this project, we aimed to detect deepfake images and their manipulated regions using the Progressive Spatio-Channel Correlation Network (PSCC-Net) with HRNet as the backbone.
+			  We trained the model on newly generated facial manipulation data to identify fake regions and provide descriptive prompts of the manipulated parts.
+			  Our approach advances deepfake detection by both localizing and describing the fake areas in images.
+			  </p>
             </ul>
           </div>
         </div>
