--- a/index.html
+++ b/index.html
@@ -458,14 +458,17 @@
           <div class="card-content">
             <span class="card-title activator teal-text hoverline"> Symbolic Regression for Time Series Forcasting (Ongoing) <i
                 class="mdi-navigation-more-vert right"></i></span>
-            <!-- <p>Developed Transformers in Scala, achieving functional parity in self-attention and multi-head attention mechanisms.</p> -->
+            
           </div>
           <div class="card-reveal">
             <span class="card-title grey-text"><small>Accomplishments</small><i
                 class="mdi-navigation-close right"></i></span>
             <ul>
-              <li><b>Tools:</b> Scala, PyTorch</li>
-              <li>Currently extending to an attention-based model for time series analysis.</li>
+			<p>
+              In this project, we are developing a scalable symbolic regression model to apply in time series forecasting.
+			  The focus is on enhancing interpretability, which is valuable for scientific discovery.
+			  This approach aims to provide clear and understandable insights from complex data.
+			 </p>
             </ul>
           </div>
         </div>
