--- a/index.html
+++ b/index.html
@@ -267,13 +267,14 @@
 		  My research interests focus on machine learning, time series forecasting using Neural Networks and Large Language Models, and symbolic regression for scientific discovery.
         </p>
         <p>
-          <ul>
-            <li><b>Languages:</b> Python, Java, Scala, C, C++, Bash</li>          
-            <li><b>Libraries:</b> NumPy, Pandas, OpenCV </li>
-            <li><b>Frameworks:</b> Django, Keras, TensorFlow, PyTorch, Scalation</li>
-            <li><b>Tools & Technologies:</b> Git, Docker, Linux, Pytorch, Diffusion Models, GANs </li>
-          </ul>
+          <!-- <ul> -->
+            <!-- <li><b>Languages:</b> Python, Java, Scala, C, C++, Bash</li>           -->
+            <!-- <li><b>Libraries:</b> NumPy, Pandas, OpenCV </li> -->
+            <!-- <li><b>Frameworks:</b> Django, Keras, TensorFlow, PyTorch, Scalation</li> -->
+            <!-- <li><b>Tools & Technologies:</b> Git, Docker, Linux, Pytorch, Diffusion Models, GANs </li> -->
+          <!-- </ul> -->
           
+		  <b> Abstract. </b> Time series
         </p>
           
       </div>
